--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module">
         import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
         Chatbot.init({
-            chatflowid: "32f74b4d-fb50-4a7c-95d5-93126b15442b",
+            chatflowid: "d095a693-e0d2-46fc-b43e-f15416d6b0e9",
             apiHost: "https://flowise-38v5.onrender.com",
             chatflowConfig: {
                 // topK: 2
@@ -37,7 +37,7 @@
                         backgroundColor: "#f7f8ff",
                         textColor: "#303235",
                         showAvatar: true,
-                        avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png",
+                        avatarSrc: "https://raw.githubusercontent.com/conornormile/icons/d933f9db583ca7acfae4ff0e537f3f55d302420e/robot.png",
                     },
                     userMessage: {
                         backgroundColor: "#3B81F6",
@@ -50,17 +50,14 @@
                         backgroundColor: '#ffffff',
                         textColor: '#303235',
                         sendButtonColor: '#3B81F6',
-                        maxChars: 50,
-                        maxCharsWarningMessage: 'You exceeded the characters limit. Please input less than 50 characters.',
                     },
                     feedback: {
                         color: '#303235',
                     },
                     footer: {
-                        textColor: '#303235',
+                        textColor: '#ffffff',
                         text: 'Powered by',
                         company: 'Flowise',
-                        companyLink: 'https://flowiseai.com',
                     }
                 }
             }
