--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 },
                 chatWindow: {
                     showTitle: true,
-                    title: 'Flowise Bot',
+                    title: 'CF Bot',
                     titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
-                    welcomeMessage: 'Hello! This is custom welcome message',
+                    welcomeMessage: 'Hello! I'm here to help make proposal writing easier.',
                     errorMessage: 'This is a custom error message',
                     backgroundColor: "#ffffff",
                     height: 700,
-                    width: 400,
+                    width: 600,
                     fontSize: 16,
                     poweredByTextColor: "#303235",
                     botMessage: {
@@ -46,7 +46,7 @@
                         avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png",
                     },
                     textInput: {
-                        placeholder: 'Type your question',
+                        placeholder: 'Type your query',
                         backgroundColor: '#ffffff',
                         textColor: '#303235',
                         sendButtonColor: '#3B81F6',
